# Software

./: environment.sh
ament_ws/00-infrastructure/duckietown_msgs/: CMakeLists.txt
ament_ws/05-teleop/adafruit_drivers/: package.xml  setup.py
ament_ws/05-teleop/dagu_car/: package.xml
ament_ws/src/00-infrastructure/duckietown_msgs/: CMakeLists.txt  package.xml
ament_ws/src/05-teleop/dagu_car/: package.xml
ament_ws/src/05-teleop/dagu_car/src/: wheels_driver_node.py
catkin_ws/src/00-infrastructure/duckietown/launch/: aira_prototype.launch  camera_localization.launch  cmd_based_intersections.launch  complex_localization.launch  ground_projection.launch  lane_filter.launch  sequence_based_intersections.launch
catkin_ws/src/00-infrastructure/duckietown_msgs/: CMakeLists.txt
catkin_ws/src/00-infrastructure/duckietown_msgs/msg/: TagAction.msg
catkin_ws/src/00-infrastructure/duckietown_msgs/srv/: GetCurrentAction.srv  GetStopLineForTag.srv  SetTagsSequence.srv
catkin_ws/src/05-teleop/dagu_car/src/: velocity_to_pose_node.py
catkin_ws/src/20-indefinite-navigation/apriltags_ros/apriltags_ros/launch/: apriltag_detector_node.launch
catkin_ws/src/20-indefinite-navigation/tag_sequence_following/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/20-indefinite-navigation/tag_sequence_following/launch/: tag_sequence_controller_node.launch  tag_sequence_detector_node.launch
catkin_ws/src/20-indefinite-navigation/tag_sequence_following/src/: tag_sequence_controller_node.py  tag_sequence_detector_node.py
catkin_ws/src/30-localization-and-planning/complex_localization/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/30-localization-and-planning/complex_localization/launch/: complex_localization_node.launch
catkin_ws/src/30-localization-and-planning/complex_localization/src/: complex_localization_node.py
catkin_ws/src/30-localization-and-planning/duckietown_description/: package.xml  tags_innopolis.csv  tiles_innopolis.csv
catkin_ws/src/30-localization-and-planning/duckietown_description/include/duckietown_description/: Csv2Xacro.py
catkin_ws/src/30-localization-and-planning/duckietown_description/launch/: tag_to_stopline_node.launch
catkin_ws/src/30-localization-and-planning/duckietown_description/src/: tag_to_stopline_node.py
catkin_ws/src/30-localization-and-planning/duckietown_description/urdf/: innopolis.urdf.xacro  macros.urdf.xacro
catkin_ws/src/40-coordination/led_interpreter/src/: LED_interpreter_node.py
catkin_ws/src/50-misc-additional-functionality/aira_prototype/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/50-misc-additional-functionality/aira_prototype/abi/: RobotLiability.json  RobotLiabilityFactory.json
catkin_ws/src/50-misc-additional-functionality/aira_prototype/launch/: aira_prototype_node.launch
catkin_ws/src/50-misc-additional-functionality/aira_prototype/src/: aira_prototype_node.py
catkin_ws/src/mdoap/src/: static_object_detector_node.py
catkin_ws/src/spring2016/agirard/camera_stuff_agirard/src/: blur_image_node.py
catkin_ws/src/spring2016/agirard/virtual_mirror_agirard/src/: average_image_node.py  mirror_node.py
catkin_ws/src/spring2016/amadoa/image_average_amadoa/src/: image_average_amadoa_node.py
catkin_ws/src/spring2016/amadoa/virtual_mirror_amadoa/src/: virtual_mirror_amadoa_node.py  virtual_mirror_amadoa_tester_node.py
catkin_ws/src/spring2016/araki/image_average_araki/src/: image_average_araki_node.py
catkin_ws/src/spring2016/araki/virtual_mirror_araki/src/: virtual_mirror_araki_node.py
catkin_ws/src/spring2016/atacchet/image_average/src/: image_average_node.py
catkin_ws/src/spring2016/atacchet/virtual_mirror_atacchet/src/: virtual_mirror_node.py
catkin_ws/src/spring2016/catliu/image_average_catliu/src/: image_average_node.py
catkin_ws/src/spring2016/catliu/virtual_mirror_catliu/src/: virtual_mirror_catliu_node.py
catkin_ws/src/spring2016/eharbitz/image_average_eharbitz/src/: image_average_node.py
catkin_ws/src/spring2016/eharbitz/virtual_mirror_eharbitz/src/: virtual_mirror_node.py
catkin_ws/src/spring2016/hanssusilo/image_average_hanssusilo/src/: image_average_node.py
catkin_ws/src/spring2016/hanssusilo/virtual_mirror_hanssusilo/src/: virtual_mirror_hanssusilo_node.py  virtual_mirror_node.py
catkin_ws/src/spring2016/jenshen/image_average_jenshen/src/: image_average_node.py
catkin_ws/src/spring2016/jenshen/virtual_mirror_jenshen/src/: virtual_mirror_jenshen_node.py  virtual_mirror_node.py
catkin_ws/src/spring2016/joe-wl/image_average_joewl/src/: image_average_joewl_node.py
catkin_ws/src/spring2016/joe-wl/virtual_mirror_joewl/src/: virtual_mirror_joewl_node.py
catkin_ws/src/spring2016/lapentab/image_average_lapentab/src/: image_average_node.py
catkin_ws/src/spring2016/lapentab/virtual_mirror_lapentab/src/: virtual_mirror_node.py
catkin_ws/src/spring2016/mrinal/image_average_mrinal/scripts/: image_average_node.py
catkin_ws/src/spring2016/mrinal/virtual_mirror_mrinal/scripts/: virtual_mirror_node.py
catkin_ws/src/spring2016/nbuckman/image_av_nbuckman/src/: image_av_node.py
catkin_ws/src/spring2016/nbuckman/image_average_nbuckman/src/: image_average_node.py
catkin_ws/src/spring2016/nbuckman/virtual_mirror_nbuckman/src/: virtual_mirror_nbuckman_node.py
catkin_ws/src/spring2016/npd22/image_average_npd22/src/: image_average_node.py
catkin_ws/src/spring2016/npd22/virtual_mirror_npd22/src/: virtual_mirror_npd22_node.py
catkin_ws/src/spring2016/qlai/average_img/src/: average_img_node.py
catkin_ws/src/spring2016/qlai/virtual_mirror_qlai/src/: virtual_mirror_qlai_node.py
catkin_ws/src/spring2016/rkk/image_average_rkk/src/: image_average_node.py
catkin_ws/src/spring2016/rkk/virtual_mirror_rkk/src/: virtual_mirror_rkk_node.py
catkin_ws/src/spring2016/samcerq/image_average_samcerq/src/: image_average_node.py
catkin_ws/src/spring2016/samcerq/virtual_mirror_samcerq/src/: virtual_mirror_node.py
setup/: duckiebot_img_creation.sh  duckietop_setup.sh
setup/network_magic/: RPi3_wifi_setup.sh
(+22 files in other folders)
