<?xml version="1.0"?>
<package format="2">
  <name>duckietown_msgs</name>
  <version>1.0.0</version>
  <description>Duckietown messages for ROS2</description>
  <maintainer email="mack@duckietown.org">Mack</maintainer>

  <license>GPLv3</license>

  <build_depend>message_generation</build_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>builtin_interfaces</depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
