<?xml version="1.0"?>
<package version="2">
  <name>dagu_car</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `dagu_car` in `package.xml`.</description>

   <author email="yershov@mit.edu">Dmitry Yershov</author>
  <author email="syliu@mit.edu">Shih-Yuan Liu</author>
  
  <maintainer email="mack@duckietown.org">Mack</maintainer>
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>adafruit_drivers</build_depend>

  <exec_depend>duckietown_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>adafruit_drivers</exec_depend>

</package>
